<?xml version="1.0" encoding="utf-8"?>
<!--
Author: Jeffrey Trotz
Date: 1/31/18
Class: CS 305
Version: 0.1
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="128sp"/>
    <TextView
        android:id="@+id/input_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sine_button"/>
        <Button
            android:id="@+id/cosine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cosine_button"/>
        <Button
            android:id="@+id/tangent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tangent_button"/>
        <Button
            android:id="@+id/logarithm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logarithm_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_button"/>
        <Button
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_button"/>
        <Button
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_button"/>
        <Button
            android:id="@+id/root_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_button"/>
        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_button"/>
        <Button
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_button"/>
        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_button"/>
        <Button
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_button"/>
        <Button
            android:id="@+id/three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_button"/>
        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_button"/>
        <Button
            android:id="@+id/decimal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimal_button"/>
        <Button
            android:id="@+id/modulus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modulus_button"/>
        <Button
            android:id="@+id/subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />
        <Button
            android:id="@+id/equals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_button"/>
        <Button
            android:id="@+id/exponent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exponent_button"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_button"/>
    </LinearLayout>
</LinearLayout>